--- a/pair.html
+++ b/pair.html
@@ -51,7 +51,7 @@
       display: flex;
       background: rgb(10, 10, 10);
       border-radius: 1rem;
-      background: black;
+      background: white;
       box-shadow: black;
       padding: 0.3rem;
       gap: 0.3rem;
@@ -142,7 +142,7 @@
         <div id="text">
           <i class="fa fa-user"></i>
           <p>
-            <h3 class="centered-text">Link with Phone Number</h3>
+            <h3 class="centered-text">RAVEN-BOT PAIRING</h3>
             <br>
             <h6>Enter your WhatsApp number without +.</h6>
             <div class="input-container">
