--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
       justify-content: center;
       height: 100vh;
       margin: 0;
-      background-color: black;
+      background-image: url("https://i.imgur.com/gTdWsIO.jpeg");
     }
 
     .btn {
