--- a/pair.html
+++ b/pair.html
@@ -52,7 +52,7 @@
       background: rgb(10, 10, 10);
       border-radius: 1rem;
       background: white;
-      box-shadow: black;
+      box-shadow: transparent;
       padding: 0.3rem;
       gap: 0.3rem;
       max-width: 300px;
