--- a/main.html
+++ b/main.html
@@ -76,9 +76,8 @@
 </head>
 <body>
 
-  <button onclick="window.open(`/qr`)" class="btn">RAVEN QR</button>
-  <button onclick="window.open(`/pair`)" class="btn">RAVEN PAIR</button>
+  <button onclick="window.open(`/pair`)" class="btn">RAVEN PAIR CODE</button>
+  <button onclick="window.open(`/qr`)" class="btn">RAVEN SCAN QR</button>
   <button onclick="window.open(`https://github.com/HunterNick2/RAVEN-BOT/fork`)" class="btn">REPO FORK</button> 
-  <button onclick="window.open(`https://github.com/HunterNick2`)" class="btn">FOLLOW ON GITHUB</button>
 </body>
 </html>
