--- a/pair.html
+++ b/pair.html
@@ -12,7 +12,7 @@
       align-items: center;
       height: 100vh;
       margin: 0;
-      background: url("https://i.imgur.com/mtS0D9N.jpeg");
+      background: url("https://files.catbox.moe/fg4u2c.jpg");
       font-family: Arial, sans-serif;
     }
 
