--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>RAVEN-BOT SESSION</title>
+  <title>PEREZ-MD SESSION</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
@@ -12,7 +12,7 @@
       justify-content: center;
       height: 100vh;
       margin: 0;
-      background-image: url("https://files.catbox.moe/0xmnxl.jpg");
+      background-image: url("https://i.imgur.com/57KG7TQ.jpeg");
     }
 
     .btn {
@@ -20,7 +20,7 @@
       --color2: rgb(0, 0, 0);
       width: 200px;
       padding: 0.8em 1.75em;
-      background-color: transparent;
+      background-color: blue;
       border-radius: 6px;
       border: .3px solid var(--color);
       transition: .5s;
@@ -76,8 +76,7 @@
 </head>
 <body>
 
-  <button onclick="window.open(`/pair`)" class="btn">RAVEN PAIR CODE</button>
-  <button onclick="window.open(`/qr`)" class="btn">RAVEN SCAN QR</button>
-  <button onclick="window.open(`https://github.com/HunterNick2/RAVEN-BOT/fork`)" class="btn">REPO FORK</button> 
+  <button onclick="window.open(`/pair`)" class="btn">PAIR CODE</button>
+  <button onclick="window.open(`https://github.com/ignatiusperez/Perez/fork`)" class="btn">REPO FORK</button> 
 </body>
 </html>
