--- a/pair.html
+++ b/pair.html
@@ -12,7 +12,7 @@
       align-items: center;
       height: 100vh;
       margin: 0;
-      background: url("https://files.catbox.moe/fg4u2c.jpg");
+      background: url("https://i.imgur.com/kNEyBwB.jpeg");
       font-family: Arial, sans-serif;
     }
 
@@ -142,11 +142,11 @@
         <div id="text">
           <i class="fa fa-user"></i>
           <p>
-            <h3 class="centered-text">RAVEN-BOT PAIRING</h3>
+            <h3 class="centered-text">PEREZ-MD PAIRING</h3>
             <br>
             <h6>Enter your WhatsApp number without +.</h6>
             <div class="input-container">
-              <input placeholder="2541146600xxx" type="number" id="number" placeholder="Enter your WhatsApp number" name="">
+              <input placeholder="254108098xxx" type="number" id="number" placeholder="Enter your WhatsApp number" name="">
               <button id="submit">Submit</button>
             </div>
             
